Bug 364716 - copy-input dialog "OK" shortcut not working
Summary: copy-input dialog "OK" shortcut not working
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: keyboard (other bugs)
Version First Reported In: 16.04.2
Platform: Debian unstable Linux
: NOR minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-24 18:04 UTC by Andreas Bourges
Modified: 2018-03-01 02:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Bourges 2016-06-24 18:04:18 UTC
when having multiple tabs, I sometimes want to send input to all sessions using keyboard shortcuts (CTL-SHIFT-.) Final "ALT-o" (OK) does not work.


Reproducible: Always

Steps to Reproduce:

1.hit "CTRL-SHIFT-." to open "copy input" dialog

2. select all sessions via shortcut "ALT-S"
 (all sessions are correctly selected)

3. try to submit using "ALT-o" (OK) does not perform "OK", but enters an "o" into the tab search bar :(

Actual Results:  
dialog is not closed, but unexpexted "o" is put into filter field

Expected Results:  
ALT-o should apply the settings and close the dialog
Comment 1 Kurt Hindenburg 2018-02-28 04:31:57 UTC
Yep, never noticed before - thanks
Comment 2 Kurt Hindenburg 2018-03-01 02:18:58 UTC
Git commit 5b6ba95255073ce13c45c4bfb7a49c1142193368 by Kurt Hindenburg.
Committed on 01/03/2018 at 02:14.
Pushed by hindenburg into branch 'master'.

Do not setShortcut() on the OK button on dialogs

using okButton->setShortcut(Konsole::ACCEL | Qt::Key_Return); causes
the Alt+O to not work on the OK button.  Both Ctrl+Return and Alt+O
now work to close the dialog.
FIXED-IN: 18.04

M  +0    -1    src/ColorSchemeEditor.cpp
M  +0    -1    src/CopyInputDialog.cpp
M  +0    -1    src/EditProfileDialog.cpp
M  +0    -1    src/HistorySizeDialog.cpp
M  +0    -1    src/RenameTabDialog.cpp

https://commits.kde.org/konsole/5b6ba95255073ce13c45c4bfb7a49c1142193368