Do not setShortcut() on the OK button on dialogs

using okButton->setShortcut(Konsole::ACCEL | Qt::Key_Return); causes
the Alt+O to not work on the OK button.  Both Ctrl+Return and Alt+O
now work to close the dialog.

BUG: 364716
FIXED-IN: 18.04